# pyprocore

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  app.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  docs_request.yml  endpoint_request.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: tests.yml
auth/: __init__.py  oauth.py  token_manager.py  token_store.py
core/: __init__.py  client.py  config.py  logger.py
docs/: agent-api.md  ai-review.md  ai-workflows.md  analytics-recipes.md  api-coverage.md  architecture.md  async-client.md  authentication.md  automation.md  changelog.md  cli.md  contributing.md  enterprise-scheduled-exports.md  evals.md  fastapi-starter.md  final-release-readiness.md  getting-started.md  github-labels.md  index.md  integration-blueprints.md  mcp.md  plugins.md  private-deployment.md  production-runbook.md  project-status.md  release.md  roadmap.md  security.md  token-store-and-rotation.md  workflows.md
docs/automation/: ci.md  cron.md  docker.md  github-actions.md  launchd.md  webhooks.md  windows-task-scheduler.md
docs/recipes/: build-ai-prompt-pack.md  build-ai-review-export.md  build-ai-rfi-package.md  build-ai-submittal-package.md  build-enhanced-rfi-package.md  build-enhanced-submittal-package.md  build-lightweight-project-context.md  build-project-context-package.md  dispatch-webhook-to-workflow.md  download-document.md  download-drawing.md  download-photo-album.md  download-photo.md  download-rfi-attachments.md  download-specification-revision.md  download-submittal-attachments.md  export-agent-mcp-tools.md  export-agent-openapi.md  export-rfi-json.md  export-rfis-to-csv.md  export-submittals-to-csv.md  find-photo.md  find-project-by-name.md  find-specification-section.md  get-daily-log-counts.md  incremental-sync.md  index.md  inspect-agent-eval-results.md  inspect-agent-run-logs.md  list-daily-log-headers.md  list-daily-logs-by-type.md  list-daily-logs-for-date.md  list-documents.md  list-drawings.md  list-filtered-rfis.md  list-manpower-logs.md  list-photo-albums.md  list-photos.md  list-projects.md  list-specification-revisions.md  (+23 more)
examples/: 01_list_companies.py  02_list_projects.py  03_find_project.py  04_list_rfis.py  05_get_rfi.py  06_download_rfi_attachments.py  07_list_submittals.py  08_get_submittal.py  09_download_submittal_attachments.py  100_list_contract_payments.py  101_list_billing_periods.py  102_agent_registry_phase8f.py  103_get_project_schedule.py  104_list_tasks.py  105_export_tasks.py  106_list_calendar_items.py  107_list_coordination_issues.py  108_list_forms.py  109_list_action_plans.py  10_build_rfi_package.py  110_agent_registry_phase8g.py  111_client_credentials_scheduled_export_pattern.py  112_enterprise_auth_diagnostics.py  113_token_store_safety.py  114_permission_diagnostics.py  115_scheduled_export_plan.py  116_validate_scheduled_export_plan.py  117_scheduled_export_dry_run.py  118_data_connection_app_export_pattern.py  119_multi_project_export_pattern.py  11_build_submittal_package.py  120_private_deployment_pattern.py  121_token_store_backends.py  122_token_store_diagnostics.py  123_credential_rotation_checklist.py  124_safe_token_clearance.py  125_sandbox_production_separation.py  126_enterprise_readiness_check.py  127_private_deployment_layout.py  128_production_runbook_summary.py  (+265 more)
examples/ai_workflows/: change_risk_review_prompt_template.md  engineering_assistant_prompt_template.md  (+6 more)
models/: __init__.py  base.py  resources.py
parser/: __init__.py  email_parser.py
pyprocore/: __init__.py  app.py  async_client.py  client.py  webhooks.py
scripts/: audit_docs_truth.py  build_ai_workflow_sample.py  build_vector_export_sample.py  check_ai_workflow_safety.py  check_examples.py  check_release_candidate.py  check_release_ready.py  check_secrets.py  check_token_store_safety.py  create_private_deployment_layout.py  create_scheduled_export_sample.py  credential_rotation_checklist.py  dry_run_scheduled_export.py  enterprise_readiness_check.py  export_agent_mcp.py  export_agent_openapi.py  inspect_token_store.py  production_runbook_summary.py  run_agent_evals.py  smoke_agent_api.py  smoke_agent_run_logs.py  smoke_daily_logs.py  smoke_documents.py  smoke_drawings.py  smoke_photos.py  smoke_specifications.py  validate_scheduled_export_plan.py
services/: __init__.py  companies.py  files.py  projects.py  rfis.py  submittals.py
tests/: test_agent_api_server.py  test_agent_evals.py  test_agent_mcp.py  test_agent_openapi.py  test_agent_registry.py  test_agent_run_logs.py  test_ai_exports.py  test_app.py  test_auth_diagnostics.py  test_automation.py  test_automation_runner.py  test_client.py  test_daily_logs.py  test_docker_ci_examples.py  test_docs_site.py  test_docs_truth_audit.py  test_doctor.py  test_documents.py  test_drawings.py  test_endpoints.py  test_enhanced_rfi_package.py  test_enhanced_submittal_package.py  test_files.py  test_final_release_polish.py  test_github_project_files.py  test_object_client.py  test_phase10_async_client.py  test_phase10b_async_exports.py  test_phase10c_async_batch.py  test_phase10d_async_coverage.py  test_phase10e_async_heavy_coverage.py  test_phase11a_plugins.py  test_phase11b_plugin_hooks.py  test_phase11c_plugin_config.py  test_phase11d_plugin_scaffolding.py  test_phase12_ai_workflows.py  test_phase13a_golden_evals.py  test_phase13b_workflow_evals.py  test_phase13c_eval_regressions.py  test_phase13d_model_fixture_evals.py  (+34 more)
(+236 files in other folders)
