[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procore-sdk"
version = "0.1.0"
description = "Production-ready Python SDK foundation for the Procore REST API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary - placeholder" }
authors = [
    { name = "Author Placeholder", email = "author@example.com" }
]
dependencies = [
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.0",
    "flake8>=7.1.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
]

[project.scripts]
procore-sdk = "app:main"

[tool.setuptools]
py-modules = ["app"]
packages = ["auth", "core", "models", "parser", "services"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["auth", "core", "models", "parser", "services"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

