[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprocore"
version = "1.0.3"
description = "A production-ready Python SDK for the Procore REST API."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

authors = [
  { name = "Vibhanshu Mishra", email = "vibhanshumishra72@gmail.com" }
]

keywords = [
  "procore",
  "construction",
  "sdk",
  "python",
  "automation",
  "oauth",
  "api",
  "rfi",
  "submittals"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.0",
    "flake8>=7.1.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
]

[project.scripts]
procore-sdk = "pyprocore.app:main"

[tool.setuptools.packages.find]
include = ["pyprocore*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["pyprocore"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
]

[project.urls]
Homepage = "https://github.com/vibhanshu-mishra/pyprocore"
Repository = "https://github.com/vibhanshu-mishra/pyprocore"
Issues = "https://github.com/vibhanshu-mishra/pyprocore/issues"
Documentation = "https://github.com/vibhanshu-mishra/pyprocore#readme"
