[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprocore"
version = "2.0.0"
description = "A production-ready Python SDK for the Procore REST API."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

authors = [
  { name = "Vibhanshu Mishra", email = "vibhanshumishra72@gmail.com" }
]
maintainers = [
  { name = "Vibhanshu Mishra", email = "vibhanshumishra72@gmail.com" }
]

keywords = [
  "procore",
  "construction",
  "sdk",
  "python",
  "automation",
  "construction-management",
  "developer-tools",
  "documents",
  "drawings",
  "project-management",
  "oauth",
  "api",
  "rfi",
  "submittals",
  "workflow"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

dependencies = [
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.0",
    "flake8>=7.1.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-requests>=2.32.0",
]
docs = [
    "mkdocs>=1.5",
]

[project.scripts]
procore-sdk = "pyprocore.app:main"

[tool.setuptools.packages.find]
include = ["pyprocore*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyprocore = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["pyprocore"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
]

[project.urls]
Homepage = "https://github.com/vibhanshu-mishra/pyprocore"
Repository = "https://github.com/vibhanshu-mishra/pyprocore"
Issues = "https://github.com/vibhanshu-mishra/pyprocore/issues"
Documentation = "https://github.com/vibhanshu-mishra/pyprocore#readme"
Changelog = "https://github.com/vibhanshu-mishra/pyprocore/blob/main/CHANGELOG.md"
